--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       image_name: ${{ github.repository }}
-      platforms: linux/amd64
+      platforms: linux/amd64,linux/arm64
 
     steps:
       - name: Checkout
